--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"MY_MCNP_PATH": "/Users/ioanhughes/Documents/PhD/MCNP/MY_MCNP.nosync", "default_jobs": 3, "dark_mode": false, "save_csv": false, "neutron_yield": "single"}
+{"MY_MCNP_PATH": "/Users/ioanhughes/Documents/PhD/MCNP/MY_MCNP.nosync", "default_jobs": 3, "dark_mode": false, "save_csv": false, "neutron_yield": "single", "theme": "darkly"}
