--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"mcnp" = ["views/logo.png", "views/icon.icns"]
